Add-Cluster.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-cluster
  namespace: zkf2
spec:
  configPatches:
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
      cluster:
        name: "outbound|9999||what.is.a.host"
    patch:
      operation: INSERT_AFTER
      value:
        name: "hardcodecluster"
        connect_timeout: "10s"
        typed_config:
          "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster"
        load_assignment:
          cluster_name: "hardcodecluster"
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: "192.160.176.234"
                    port_value: 9999
  - applyTo: CLUSTER
    match:
      context: SIDECAR_OUTBOUND
      cluster:
        name: "outbound|9999||what.is.a.host"
    patch:
      operation: INSERT_AFTER
      value:
        name: "useheadercluster"
        connect_timeout: "10s"
        typed_config:
          "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster"
        type: "ORIGINAL_DST"
        lb_policy: "CLUSTER_PROVIDED"
        protocol_selection: "USE_DOWNSTREAM_PROTOCOL"
        original_dst_lb_config:
          use_http_header: true
