Replace-Networkfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: replace-networkfilter
  namespace: zkf2
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        name: "unix:///uds/out.socket_0"
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
    patch:
      operation: REMOVE
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        name: "unix:///uds/out.socket_0"
        filterChain:
    patch:
      operation: ADD
      value:
        name: "envoy.tcp_proxy"
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy"
          stat_prefix: "outbound_unix:///uds/out.socket_0"
          cluster: "PassthroughCluster"
