istio-manipulation-removefilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: uds
  namespace: zkf2
spec:
  configPatches:
  # this is not good, removing envoy.router would cause container failure
  #- applyTo: HTTP_FILTER
  #  match:
  #    context: SIDECAR_OUTBOUND
  #    listener:
  #      name: "unix:///uds/out.socket_0"
  #      filterChain:
  #       filter: 
  #         name: "envoy.http_connection_manager"
  #         subFilter:
  #           name: "envoy.router"
  # patch:
  #   operation: REMOVE
  # "metadata_exchange cannot be remove by this even we want to do it"
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        name: "unix:///uds/out.socket_0"
        filterChain:
          filter: 
            name: "envoy.http_connection_manager"
            subFilter:
              name: "istio.metadata_exchange"
    patch:
      operation: REMOVE
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        name: "unix:///uds/out.socket_0"
        filterChain:
          filter: 
            name: "envoy.http_connection_manager"
            subFilter:
              name: "istio.alpn"
    patch:
      operation: REMOVE
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        name: "unix:///uds/out.socket_0"
        filterChain:
          filter: 
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.filters.http.cors"
    patch:
      operation: REMOVE
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        name: "unix:///uds/out.socket_0"
        filterChain:
          filter: 
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.fault"
    patch:
      operation: REMOVE
  # istio.stats cannot be removed from here even we want to do it
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        name: "unix:///uds/out.socket_0"
        filterChain:
          filter: 
            name: "envoy.http_connection_manager"
            subFilter:
              name: "istio.stats"
    patch:
      operation: REMOVE
